# event-scout

./: .env.example  .gitignore  LICENSE  README.md  format_existing.py  pyproject.toml  run_weekly.py  setup_event_agent.py
.github/workflows/: weekly-events.yml
config/: service-account.example.json
